name:                weather
version:             0.1.0.0
description:         A trivial program for learning Wreq/Aeson/Lens.
homepage:            https://github.com/bactroid/weather#readme
license:             GPL-3
license-file:        LICENSE
author:              Kate Haskell
maintainer:          fuzzcat@bactroid.net
copyright:           2018 Kate Haskell
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable weather
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , wreq
                     , lens
                     , aeson
                     , lens-aeson
                     , containers
                     , bytestring
                     , transformers
